--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
 
     </div>
-    <script src="script.js"></script>
-    <script src="init.js"></script>
+    <script src="main.js"></script>
+    <script defer src="init.js"></script>
 </body>
 </html>
