--- a/index.html
+++ b/index.html
@@ -202,8 +202,64 @@
                            </div>
                        </div>
                    </li>
+                   <li>
+                       <div class="details">
+                           <div class="title">
+                               <h5>Vision 2020 (Remix)| www.NGwide.net  </h5>
+
+                           </div>
+                           <div class="Artist">
+                               <h5>Bella Shmurda-(INSTAGRAM:</h5>
+
+                           </div>
+                           <div class="download-details">
+                               <h5>iluminnaija.com</h5>
+
+                           </div>
+                           <div class="year">
+                               <h5>2020</h5>
+
+                           </div>
+                           <div class="genre">
+                               <h5>Afro Pop</h5>
+
+                           </div>
+                           <div class="durations">
+                               <h5>3:41</h5>
+
+                           </div>
+                       </div>
+                   </li>
                   
                    
+                   <li>
+                       <div class="details">
+                           <div class="title">
+                               <h5>Mad</h5>
+
+                           </div>
+                           <div class="Artist">
+                               <h5>WurlD x Sarz</h5>
+
+                           </div>
+                           <div class="download-details">
+                               <h5>www.seekhype.ng</h5>
+
+                           </div>
+                           <div class="year">
+                               <h5>2019</h5>
+
+                           </div>
+                           <div class="genre">
+                               <h5>Unknown Genre</h5>
+
+                           </div>
+                           <div class="durations">
+                               <h5>3:58</h5>
+
+                           </div>
+                       </div>
+                   </li>
                    <li>
                        <div class="details">
                            <div class="title">
